src/Parser/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from src/Parser/Parser.y
-----------------------------------------------------------------------------

state 9 contains 3 shift/reduce conflicts.
state 82 contains 4 shift/reduce conflicts.
state 92 contains 3 shift/reduce conflicts.

terminal '.' is unused
terminal '|' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseModule -> Module                       (0)
	%start_parseTheorems -> Theorems                   (1)
	%start_parseFormula -> Formula                     (2)
	%start_parse -> Module                             (3)
	Module -> 'module' ModuleName ConstantsD Aliases Axioms Theorems   (4)
	ModuleName -> IDENT                                (5)
	ConstantsD -> 'constants' ':' Consts               (6)
	ConstantsD ->                                      (7)
	Aliases -> 'aliases' ':' Alis                      (8)
	Aliases ->                                         (9)
	Alis -> Alias                                      (10)
	Alis -> Alias ',' Alis                             (11)
	Alias -> Ali '=' Term                              (12)
	Ali -> IDENT                                       (13)
	Consts -> IDENT                                    (14)
	Consts -> IDENT ',' Consts                         (15)
	Axioms -> 'axioms' ':' Axs                         (16)
	Axioms ->                                          (17)
	Axs -> Formula                                     (18)
	Axs -> Formula ',' Axs                             (19)
	Theorems -> Theorem Theorems                       (20)
	Theorems ->                                        (21)
	Theorem -> 'theorem' IDENT ':' Assumptions '⊢' Conclusion Proof   (22)
	Theorem -> 'theorem' IDENT ':' Formula Proof       (23)
	Assumptions -> Formula AssumpsRest                 (24)
	Assumptions ->                                     (25)
	AssumpsRest -> ',' Formula AssumpsRest             (26)
	AssumpsRest ->                                     (27)
	Conclusion -> Formula                              (28)
	Formula -> '⊤'                                     (29)
	Formula -> '⊥'                                     (30)
	Formula -> Relation                                (31)
	Formula -> '¬' Formula                             (32)
	Formula -> Formula '∧' Formula                     (33)
	Formula -> Formula '∨' Formula                     (34)
	Formula -> Formula '==>' Formula                   (35)
	Formula -> Formula '<=>' Formula                   (36)
	Formula -> '∀' B Binders ':' QFormula              (37)
	Formula -> '∃' B Binders ':' QFormula              (38)
	Formula -> '(' Formula ')'                         (39)
	Formula -> '{' Formula '}'                         (40)
	Formula -> '[' Formula ']'                         (41)
	B ->                                               (42)
	Binders ->                                         (43)
	Binders -> IDENT Binders                           (44)
	QFormula -> Formula                                (45)
	Relation -> IDENT TermArgsM                        (46)
	TermArgsM -> '(' TArgsSep ')'                      (47)
	TermArgsM -> '[' TArgsSep ']'                      (48)
	TermArgsM -> '{' TArgsSep '}'                      (49)
	TermArgsM ->                                       (50)
	TArgsSep -> Term                                   (51)
	TArgsSep -> Term ',' TArgsSep                      (52)
	TArgsSep ->                                        (53)
	Term -> IDENT 'ᶜ' TermArgsM                        (54)
	Term -> IDENT TermArgsM                            (55)
	Term -> '(' Term ')'                               (56)
	Proof -> Subproof Proof                            (57)
	Proof -> Claim Proof                               (58)
	Proof ->                                           (59)
	Subproof -> SubProofAux                            (60)
	Subproof -> Name ':' SubProofAux                   (61)
	SubProofAux -> BEGIN_LAYOUT Assumption '---' Proof END_LAYOUT   (62)
	Assumption -> ForAll Universals                    (63)
	Assumption -> AssumedFormulae                      (64)
	Assumption -> AssumedFormula 'for' 'some' Constants   (65)
	ForAll -> 'all'                                    (66)
	ForAll -> 'for' 'all'                              (67)
	AssumedFormula -> Name ':' Formula                 (68)
	AssumedFormula -> Formula                          (69)
	AssumedFormulae -> AssumedFormula AssumedFormulae   (70)
	AssumedFormulae -> AssumedFormula                  (71)
	Universals -> IDENT                                (72)
	Universals -> IDENT ',' Universals                 (73)
	Constants -> IDENT                                 (74)
	Constants -> IDENT ',' Constants                   (75)
	Claim -> Name ':' Formula Just                     (76)
	Claim -> Formula Just                              (77)
	Name -> IDENT                                      (78)
	Name -> '_'                                        (79)
	Just -> 'by' 'rule' RuleKind OnIdents              (80)
	Just -> 'by' 'induction' OnIdents                  (81)
	Just -> 'by' 'unproved'                            (82)
	Just -> 'by' 'theorem' IDENT OnIdents              (83)
	RuleKind -> IDENT                                  (84)
	OnIdents -> 'on' Idents                            (85)
	OnIdents ->                                        (86)
	Idents -> IDENT                                    (87)
	Idents -> IDENT ',' IdentsAux                      (88)
	IdentsAux -> IDENT ',' IdentsAux                   (89)
	IdentsAux -> IDENT                                 (90)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	IDENT          { Token.Ident $$ }
	'ᶜ'            { Token.Constant'Before }
	'module'       { Token.Module }
	','            { Token.Comma }
	'.'            { Token.Period }
	'theorem'      { Token.Theorem }
	'constants'    { Token.Constants }
	'axioms'       { Token.Axioms }
	'aliases'      { Token.Aliases }
	'by'           { Token.By }
	'rule'         { Token.Rule }
	'induction'    { Token.Induction }
	'on'           { Token.On }
	'for'          { Token.For }
	'all'          { Token.All }
	'some'         { Token.Some }
	'unproved'     { Token.Unproved }
	':'            { Token.Colon }
	'⊢'            { Token.Turnstile }
	'⊤'            { Token.Tautology }
	'⊥'            { Token.Contradiction }
	'∀'            { Token.Forall }
	'∃'            { Token.Exists }
	'¬'            { Token.Negate }
	'∧'            { Token.And }
	'∨'            { Token.Or }
	'==>'          { Token.Implication }
	'<=>'          { Token.Equivalence }
	'('            { Token.Paren'Open }
	')'            { Token.Paren'Close }
	'['            { Token.Box'Open }
	']'            { Token.Box'Close }
	'{'            { Token.Bracket'Open }
	'}'            { Token.Bracket'Close }
	'_'            { Token.Underscore }
	'='            { Token.Equal }
	'|'            { Token.Pipe }
	'---'          { Token.Dash }
	BEGIN_LAYOUT   { Token.Begin'Layout }
	END_LAYOUT     { Token.End'Layout }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseModule rule  0
	%start_parseTheorems rule  1
	%start_parseFormula rule  2
	%start_parse    rule  3
	Module          rule  4
	ModuleName      rule  5
	ConstantsD      rules 6, 7
	Aliases         rules 8, 9
	Alis            rules 10, 11
	Alias           rule  12
	Ali             rule  13
	Consts          rules 14, 15
	Axioms          rules 16, 17
	Axs             rules 18, 19
	Theorems        rules 20, 21
	Theorem         rules 22, 23
	Assumptions     rules 24, 25
	AssumpsRest     rules 26, 27
	Conclusion      rule  28
	Formula         rules 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41
	B               rule  42
	Binders         rules 43, 44
	QFormula        rule  45
	Relation        rule  46
	TermArgsM       rules 47, 48, 49, 50
	TArgsSep        rules 51, 52, 53
	Term            rules 54, 55, 56
	Proof           rules 57, 58, 59
	Subproof        rules 60, 61
	SubProofAux     rule  62
	Assumption      rules 63, 64, 65
	ForAll          rules 66, 67
	AssumedFormula  rules 68, 69
	AssumedFormulae rules 70, 71
	Universals      rules 72, 73
	Constants       rules 74, 75
	Claim           rules 76, 77
	Name            rules 78, 79
	Just            rules 80, 81, 82, 83
	RuleKind        rule  84
	OnIdents        rules 85, 86
	Idents          rules 87, 88
	IdentsAux       rules 89, 90

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseModule -> . Module                      (rule 0)

	'module'       shift, and enter state 5

	Module         goto state 21

State 1

	%start_parseTheorems -> . Theorems                  (rule 1)

	'theorem'      shift, and enter state 20
	%eof           reduce using rule 21

	Theorems       goto state 18
	Theorem        goto state 19

State 2

	%start_parseFormula -> . Formula                    (rule 2)

	IDENT          shift, and enter state 9
	'⊤'            shift, and enter state 10
	'⊥'            shift, and enter state 11
	'∀'            shift, and enter state 12
	'∃'            shift, and enter state 13
	'¬'            shift, and enter state 14
	'('            shift, and enter state 15
	'['            shift, and enter state 16
	'{'            shift, and enter state 17

	Formula        goto state 7
	Relation       goto state 8

State 3

	%start_parse -> . Module                            (rule 3)

	'module'       shift, and enter state 5

	Module         goto state 6

State 4

	Module -> . 'module' ModuleName ConstantsD Aliases Axioms Theorems    (rule 4)

	'module'       shift, and enter state 5


State 5

	Module -> 'module' . ModuleName ConstantsD Aliases Axioms Theorems    (rule 4)

	IDENT          shift, and enter state 39

	ModuleName     goto state 38

State 6

	%start_parse -> Module .                            (rule 3)

	%eof           accept


State 7

	%start_parseFormula -> Formula .                    (rule 2)
	Formula -> Formula . '∧' Formula                    (rule 33)
	Formula -> Formula . '∨' Formula                    (rule 34)
	Formula -> Formula . '==>' Formula                  (rule 35)
	Formula -> Formula . '<=>' Formula                  (rule 36)

	'∧'            shift, and enter state 34
	'∨'            shift, and enter state 35
	'==>'          shift, and enter state 36
	'<=>'          shift, and enter state 37
	%eof           accept


State 8

	Formula -> Relation .                               (rule 31)

	IDENT          reduce using rule 31
	','            reduce using rule 31
	'theorem'      reduce using rule 31
	'by'           reduce using rule 31
	'for'          reduce using rule 31
	'⊢'            reduce using rule 31
	'⊤'            reduce using rule 31
	'⊥'            reduce using rule 31
	'∀'            reduce using rule 31
	'∃'            reduce using rule 31
	'¬'            reduce using rule 31
	'∧'            reduce using rule 31
	'∨'            reduce using rule 31
	'==>'          reduce using rule 31
	'<=>'          reduce using rule 31
	'('            reduce using rule 31
	')'            reduce using rule 31
	'['            reduce using rule 31
	']'            reduce using rule 31
	'{'            reduce using rule 31
	'}'            reduce using rule 31
	'_'            reduce using rule 31
	'---'          reduce using rule 31
	BEGIN_LAYOUT   reduce using rule 31
	%eof           reduce using rule 31


State 9

	Relation -> IDENT . TermArgsM                       (rule 46)

	IDENT          reduce using rule 50
	','            reduce using rule 50
	'theorem'      reduce using rule 50
	'by'           reduce using rule 50
	'for'          reduce using rule 50
	'⊢'            reduce using rule 50
	'⊤'            reduce using rule 50
	'⊥'            reduce using rule 50
	'∀'            reduce using rule 50
	'∃'            reduce using rule 50
	'¬'            reduce using rule 50
	'∧'            reduce using rule 50
	'∨'            reduce using rule 50
	'==>'          reduce using rule 50
	'<=>'          reduce using rule 50
	'('            shift, and enter state 31
			(reduce using rule 50)

	')'            reduce using rule 50
	'['            shift, and enter state 32
			(reduce using rule 50)

	']'            reduce using rule 50
	'{'            shift, and enter state 33
			(reduce using rule 50)

	'}'            reduce using rule 50
	'_'            reduce using rule 50
	'---'          reduce using rule 50
	BEGIN_LAYOUT   reduce using rule 50
	%eof           reduce using rule 50

	TermArgsM      goto state 30

State 10

	Formula -> '⊤' .                                    (rule 29)

	IDENT          reduce using rule 29
	','            reduce using rule 29
	'theorem'      reduce using rule 29
	'by'           reduce using rule 29
	'for'          reduce using rule 29
	'⊢'            reduce using rule 29
	'⊤'            reduce using rule 29
	'⊥'            reduce using rule 29
	'∀'            reduce using rule 29
	'∃'            reduce using rule 29
	'¬'            reduce using rule 29
	'∧'            reduce using rule 29
	'∨'            reduce using rule 29
	'==>'          reduce using rule 29
	'<=>'          reduce using rule 29
	'('            reduce using rule 29
	')'            reduce using rule 29
	'['            reduce using rule 29
	']'            reduce using rule 29
	'{'            reduce using rule 29
	'}'            reduce using rule 29
	'_'            reduce using rule 29
	'---'          reduce using rule 29
	BEGIN_LAYOUT   reduce using rule 29
	%eof           reduce using rule 29


State 11

	Formula -> '⊥' .                                    (rule 30)

	IDENT          reduce using rule 30
	','            reduce using rule 30
	'theorem'      reduce using rule 30
	'by'           reduce using rule 30
	'for'          reduce using rule 30
	'⊢'            reduce using rule 30
	'⊤'            reduce using rule 30
	'⊥'            reduce using rule 30
	'∀'            reduce using rule 30
	'∃'            reduce using rule 30
	'¬'            reduce using rule 30
	'∧'            reduce using rule 30
	'∨'            reduce using rule 30
	'==>'          reduce using rule 30
	'<=>'          reduce using rule 30
	'('            reduce using rule 30
	')'            reduce using rule 30
	'['            reduce using rule 30
	']'            reduce using rule 30
	'{'            reduce using rule 30
	'}'            reduce using rule 30
	'_'            reduce using rule 30
	'---'          reduce using rule 30
	BEGIN_LAYOUT   reduce using rule 30
	%eof           reduce using rule 30


State 12

	Formula -> '∀' . B Binders ':' QFormula             (rule 37)

	IDENT          reduce using rule 42
	':'            reduce using rule 42

	B              goto state 29

State 13

	Formula -> '∃' . B Binders ':' QFormula             (rule 38)

	IDENT          reduce using rule 42
	':'            reduce using rule 42

	B              goto state 28

State 14

	Formula -> '¬' . Formula                            (rule 32)

	IDENT          shift, and enter state 9
	'⊤'            shift, and enter state 10
	'⊥'            shift, and enter state 11
	'∀'            shift, and enter state 12
	'∃'            shift, and enter state 13
	'¬'            shift, and enter state 14
	'('            shift, and enter state 15
	'['            shift, and enter state 16
	'{'            shift, and enter state 17

	Formula        goto state 27
	Relation       goto state 8

State 15

	Formula -> '(' . Formula ')'                        (rule 39)

	IDENT          shift, and enter state 9
	'⊤'            shift, and enter state 10
	'⊥'            shift, and enter state 11
	'∀'            shift, and enter state 12
	'∃'            shift, and enter state 13
	'¬'            shift, and enter state 14
	'('            shift, and enter state 15
	'['            shift, and enter state 16
	'{'            shift, and enter state 17

	Formula        goto state 26
	Relation       goto state 8

State 16

	Formula -> '[' . Formula ']'                        (rule 41)

	IDENT          shift, and enter state 9
	'⊤'            shift, and enter state 10
	'⊥'            shift, and enter state 11
	'∀'            shift, and enter state 12
	'∃'            shift, and enter state 13
	'¬'            shift, and enter state 14
	'('            shift, and enter state 15
	'['            shift, and enter state 16
	'{'            shift, and enter state 17

	Formula        goto state 25
	Relation       goto state 8

State 17

	Formula -> '{' . Formula '}'                        (rule 40)

	IDENT          shift, and enter state 9
	'⊤'            shift, and enter state 10
	'⊥'            shift, and enter state 11
	'∀'            shift, and enter state 12
	'∃'            shift, and enter state 13
	'¬'            shift, and enter state 14
	'('            shift, and enter state 15
	'['            shift, and enter state 16
	'{'            shift, and enter state 17

	Formula        goto state 24
	Relation       goto state 8

State 18

	%start_parseTheorems -> Theorems .                  (rule 1)

	%eof           accept


State 19

	Theorems -> Theorem . Theorems                      (rule 20)

	'theorem'      shift, and enter state 20
	%eof           reduce using rule 21

	Theorems       goto state 23
	Theorem        goto state 19

State 20

	Theorem -> 'theorem' . IDENT ':' Assumptions '⊢' Conclusion Proof    (rule 22)
	Theorem -> 'theorem' . IDENT ':' Formula Proof      (rule 23)

	IDENT          shift, and enter state 22


State 21

	%start_parseModule -> Module .                      (rule 0)

	%eof           accept


State 22

	Theorem -> 'theorem' IDENT . ':' Assumptions '⊢' Conclusion Proof    (rule 22)
	Theorem -> 'theorem' IDENT . ':' Formula Proof      (rule 23)

	':'            shift, and enter state 58


State 23

	Theorems -> Theorem Theorems .                      (rule 20)

	%eof           reduce using rule 20


State 24

	Formula -> Formula . '∧' Formula                    (rule 33)
	Formula -> Formula . '∨' Formula                    (rule 34)
	Formula -> Formula . '==>' Formula                  (rule 35)
	Formula -> Formula . '<=>' Formula                  (rule 36)
	Formula -> '{' Formula . '}'                        (rule 40)

	'∧'            shift, and enter state 34
	'∨'            shift, and enter state 35
	'==>'          shift, and enter state 36
	'<=>'          shift, and enter state 37
	'}'            shift, and enter state 57


State 25

	Formula -> Formula . '∧' Formula                    (rule 33)
	Formula -> Formula . '∨' Formula                    (rule 34)
	Formula -> Formula . '==>' Formula                  (rule 35)
	Formula -> Formula . '<=>' Formula                  (rule 36)
	Formula -> '[' Formula . ']'                        (rule 41)

	'∧'            shift, and enter state 34
	'∨'            shift, and enter state 35
	'==>'          shift, and enter state 36
	'<=>'          shift, and enter state 37
	']'            shift, and enter state 56


State 26

	Formula -> Formula . '∧' Formula                    (rule 33)
	Formula -> Formula . '∨' Formula                    (rule 34)
	Formula -> Formula . '==>' Formula                  (rule 35)
	Formula -> Formula . '<=>' Formula                  (rule 36)
	Formula -> '(' Formula . ')'                        (rule 39)

	'∧'            shift, and enter state 34
	'∨'            shift, and enter state 35
	'==>'          shift, and enter state 36
	'<=>'          shift, and enter state 37
	')'            shift, and enter state 55


State 27

	Formula -> '¬' Formula .                            (rule 32)
	Formula -> Formula . '∧' Formula                    (rule 33)
	Formula -> Formula . '∨' Formula                    (rule 34)
	Formula -> Formula . '==>' Formula                  (rule 35)
	Formula -> Formula . '<=>' Formula                  (rule 36)

	IDENT          reduce using rule 32
	','            reduce using rule 32
	'theorem'      reduce using rule 32
	'by'           reduce using rule 32
	'for'          reduce using rule 32
	'⊢'            reduce using rule 32
	'⊤'            reduce using rule 32
	'⊥'            reduce using rule 32
	'∀'            reduce using rule 32
	'∃'            reduce using rule 32
	'¬'            reduce using rule 32
	'∧'            reduce using rule 32
	'∨'            reduce using rule 32
	'==>'          reduce using rule 32
	'<=>'          reduce using rule 32
	'('            reduce using rule 32
	')'            reduce using rule 32
	'['            reduce using rule 32
	']'            reduce using rule 32
	'{'            reduce using rule 32
	'}'            reduce using rule 32
	'_'            reduce using rule 32
	'---'          reduce using rule 32
	BEGIN_LAYOUT   reduce using rule 32
	%eof           reduce using rule 32


State 28

	Formula -> '∃' B . Binders ':' QFormula             (rule 38)

	IDENT          shift, and enter state 53
	':'            reduce using rule 43

	Binders        goto state 54

State 29

	Formula -> '∀' B . Binders ':' QFormula             (rule 37)

	IDENT          shift, and enter state 53
	':'            reduce using rule 43

	Binders        goto state 52

State 30

	Relation -> IDENT TermArgsM .                       (rule 46)

	IDENT          reduce using rule 46
	','            reduce using rule 46
	'theorem'      reduce using rule 46
	'by'           reduce using rule 46
	'for'          reduce using rule 46
	'⊢'            reduce using rule 46
	'⊤'            reduce using rule 46
	'⊥'            reduce using rule 46
	'∀'            reduce using rule 46
	'∃'            reduce using rule 46
	'¬'            reduce using rule 46
	'∧'            reduce using rule 46
	'∨'            reduce using rule 46
	'==>'          reduce using rule 46
	'<=>'          reduce using rule 46
	'('            reduce using rule 46
	')'            reduce using rule 46
	'['            reduce using rule 46
	']'            reduce using rule 46
	'{'            reduce using rule 46
	'}'            reduce using rule 46
	'_'            reduce using rule 46
	'---'          reduce using rule 46
	BEGIN_LAYOUT   reduce using rule 46
	%eof           reduce using rule 46


State 31

	TermArgsM -> '(' . TArgsSep ')'                     (rule 47)

	IDENT          shift, and enter state 48
	'('            shift, and enter state 49
	')'            reduce using rule 53

	TArgsSep       goto state 51
	Term           goto state 47

State 32

	TermArgsM -> '[' . TArgsSep ']'                     (rule 48)

	IDENT          shift, and enter state 48
	'('            shift, and enter state 49
	']'            reduce using rule 53

	TArgsSep       goto state 50
	Term           goto state 47

State 33

	TermArgsM -> '{' . TArgsSep '}'                     (rule 49)

	IDENT          shift, and enter state 48
	'('            shift, and enter state 49
	'}'            reduce using rule 53

	TArgsSep       goto state 46
	Term           goto state 47

State 34

	Formula -> Formula '∧' . Formula                    (rule 33)

	IDENT          shift, and enter state 9
	'⊤'            shift, and enter state 10
	'⊥'            shift, and enter state 11
	'∀'            shift, and enter state 12
	'∃'            shift, and enter state 13
	'¬'            shift, and enter state 14
	'('            shift, and enter state 15
	'['            shift, and enter state 16
	'{'            shift, and enter state 17

	Formula        goto state 45
	Relation       goto state 8

State 35

	Formula -> Formula '∨' . Formula                    (rule 34)

	IDENT          shift, and enter state 9
	'⊤'            shift, and enter state 10
	'⊥'            shift, and enter state 11
	'∀'            shift, and enter state 12
	'∃'            shift, and enter state 13
	'¬'            shift, and enter state 14
	'('            shift, and enter state 15
	'['            shift, and enter state 16
	'{'            shift, and enter state 17

	Formula        goto state 44
	Relation       goto state 8

State 36

	Formula -> Formula '==>' . Formula                  (rule 35)

	IDENT          shift, and enter state 9
	'⊤'            shift, and enter state 10
	'⊥'            shift, and enter state 11
	'∀'            shift, and enter state 12
	'∃'            shift, and enter state 13
	'¬'            shift, and enter state 14
	'('            shift, and enter state 15
	'['            shift, and enter state 16
	'{'            shift, and enter state 17

	Formula        goto state 43
	Relation       goto state 8

State 37

	Formula -> Formula '<=>' . Formula                  (rule 36)

	IDENT          shift, and enter state 9
	'⊤'            shift, and enter state 10
	'⊥'            shift, and enter state 11
	'∀'            shift, and enter state 12
	'∃'            shift, and enter state 13
	'¬'            shift, and enter state 14
	'('            shift, and enter state 15
	'['            shift, and enter state 16
	'{'            shift, and enter state 17

	Formula        goto state 42
	Relation       goto state 8

State 38

	Module -> 'module' ModuleName . ConstantsD Aliases Axioms Theorems    (rule 4)

	'theorem'      reduce using rule 7
	'constants'    shift, and enter state 41
	'axioms'       reduce using rule 7
	'aliases'      reduce using rule 7
	%eof           reduce using rule 7

	ConstantsD     goto state 40

State 39

	ModuleName -> IDENT .                               (rule 5)

	'theorem'      reduce using rule 5
	'constants'    reduce using rule 5
	'axioms'       reduce using rule 5
	'aliases'      reduce using rule 5
	%eof           reduce using rule 5


State 40

	Module -> 'module' ModuleName ConstantsD . Aliases Axioms Theorems    (rule 4)

	'theorem'      reduce using rule 9
	'axioms'       reduce using rule 9
	'aliases'      shift, and enter state 73
	%eof           reduce using rule 9

	Aliases        goto state 72

State 41

	ConstantsD -> 'constants' . ':' Consts              (rule 6)

	':'            shift, and enter state 71


State 42

	Formula -> Formula . '∧' Formula                    (rule 33)
	Formula -> Formula . '∨' Formula                    (rule 34)
	Formula -> Formula . '==>' Formula                  (rule 35)
	Formula -> Formula . '<=>' Formula                  (rule 36)
	Formula -> Formula '<=>' Formula .                  (rule 36)

	IDENT          reduce using rule 36
	','            reduce using rule 36
	'theorem'      reduce using rule 36
	'by'           reduce using rule 36
	'for'          reduce using rule 36
	'⊢'            reduce using rule 36
	'⊤'            reduce using rule 36
	'⊥'            reduce using rule 36
	'∀'            reduce using rule 36
	'∃'            reduce using rule 36
	'¬'            reduce using rule 36
	'∧'            shift, and enter state 34
	'∨'            shift, and enter state 35
	'==>'          shift, and enter state 36
	'<=>'          shift, and enter state 37
	'('            reduce using rule 36
	')'            reduce using rule 36
	'['            reduce using rule 36
	']'            reduce using rule 36
	'{'            reduce using rule 36
	'}'            reduce using rule 36
	'_'            reduce using rule 36
	'---'          reduce using rule 36
	BEGIN_LAYOUT   reduce using rule 36
	%eof           reduce using rule 36


State 43

	Formula -> Formula . '∧' Formula                    (rule 33)
	Formula -> Formula . '∨' Formula                    (rule 34)
	Formula -> Formula . '==>' Formula                  (rule 35)
	Formula -> Formula '==>' Formula .                  (rule 35)
	Formula -> Formula . '<=>' Formula                  (rule 36)

	IDENT          reduce using rule 35
	','            reduce using rule 35
	'theorem'      reduce using rule 35
	'by'           reduce using rule 35
	'for'          reduce using rule 35
	'⊢'            reduce using rule 35
	'⊤'            reduce using rule 35
	'⊥'            reduce using rule 35
	'∀'            reduce using rule 35
	'∃'            reduce using rule 35
	'¬'            reduce using rule 35
	'∧'            shift, and enter state 34
	'∨'            shift, and enter state 35
	'==>'          shift, and enter state 36
	'<=>'          reduce using rule 35
	'('            reduce using rule 35
	')'            reduce using rule 35
	'['            reduce using rule 35
	']'            reduce using rule 35
	'{'            reduce using rule 35
	'}'            reduce using rule 35
	'_'            reduce using rule 35
	'---'          reduce using rule 35
	BEGIN_LAYOUT   reduce using rule 35
	%eof           reduce using rule 35


State 44

	Formula -> Formula . '∧' Formula                    (rule 33)
	Formula -> Formula . '∨' Formula                    (rule 34)
	Formula -> Formula '∨' Formula .                    (rule 34)
	Formula -> Formula . '==>' Formula                  (rule 35)
	Formula -> Formula . '<=>' Formula                  (rule 36)

	IDENT          reduce using rule 34
	','            reduce using rule 34
	'theorem'      reduce using rule 34
	'by'           reduce using rule 34
	'for'          reduce using rule 34
	'⊢'            reduce using rule 34
	'⊤'            reduce using rule 34
	'⊥'            reduce using rule 34
	'∀'            reduce using rule 34
	'∃'            reduce using rule 34
	'¬'            reduce using rule 34
	'∧'            shift, and enter state 34
	'∨'            reduce using rule 34
	'==>'          reduce using rule 34
	'<=>'          reduce using rule 34
	'('            reduce using rule 34
	')'            reduce using rule 34
	'['            reduce using rule 34
	']'            reduce using rule 34
	'{'            reduce using rule 34
	'}'            reduce using rule 34
	'_'            reduce using rule 34
	'---'          reduce using rule 34
	BEGIN_LAYOUT   reduce using rule 34
	%eof           reduce using rule 34


State 45

	Formula -> Formula . '∧' Formula                    (rule 33)
	Formula -> Formula '∧' Formula .                    (rule 33)
	Formula -> Formula . '∨' Formula                    (rule 34)
	Formula -> Formula . '==>' Formula                  (rule 35)
	Formula -> Formula . '<=>' Formula                  (rule 36)

	IDENT          reduce using rule 33
	','            reduce using rule 33
	'theorem'      reduce using rule 33
	'by'           reduce using rule 33
	'for'          reduce using rule 33
	'⊢'            reduce using rule 33
	'⊤'            reduce using rule 33
	'⊥'            reduce using rule 33
	'∀'            reduce using rule 33
	'∃'            reduce using rule 33
	'¬'            reduce using rule 33
	'∧'            reduce using rule 33
	'∨'            reduce using rule 33
	'==>'          reduce using rule 33
	'<=>'          reduce using rule 33
	'('            reduce using rule 33
	')'            reduce using rule 33
	'['            reduce using rule 33
	']'            reduce using rule 33
	'{'            reduce using rule 33
	'}'            reduce using rule 33
	'_'            reduce using rule 33
	'---'          reduce using rule 33
	BEGIN_LAYOUT   reduce using rule 33
	%eof           reduce using rule 33


State 46

	TermArgsM -> '{' TArgsSep . '}'                     (rule 49)

	'}'            shift, and enter state 70


State 47

	TArgsSep -> Term .                                  (rule 51)
	TArgsSep -> Term . ',' TArgsSep                     (rule 52)

	','            shift, and enter state 69
	')'            reduce using rule 51
	']'            reduce using rule 51
	'}'            reduce using rule 51


State 48

	Term -> IDENT . 'ᶜ' TermArgsM                       (rule 54)
	Term -> IDENT . TermArgsM                           (rule 55)

	'ᶜ'            shift, and enter state 68
	','            reduce using rule 50
	'theorem'      reduce using rule 50
	'axioms'       reduce using rule 50
	'('            shift, and enter state 31
	')'            reduce using rule 50
	'['            shift, and enter state 32
	']'            reduce using rule 50
	'{'            shift, and enter state 33
	'}'            reduce using rule 50
	%eof           reduce using rule 50

	TermArgsM      goto state 67

State 49

	Term -> '(' . Term ')'                              (rule 56)

	IDENT          shift, and enter state 48
	'('            shift, and enter state 49

	Term           goto state 66

State 50

	TermArgsM -> '[' TArgsSep . ']'                     (rule 48)

	']'            shift, and enter state 65


State 51

	TermArgsM -> '(' TArgsSep . ')'                     (rule 47)

	')'            shift, and enter state 64


State 52

	Formula -> '∀' B Binders . ':' QFormula             (rule 37)

	':'            shift, and enter state 63


State 53

	Binders -> IDENT . Binders                          (rule 44)

	IDENT          shift, and enter state 53
	':'            reduce using rule 43

	Binders        goto state 62

State 54

	Formula -> '∃' B Binders . ':' QFormula             (rule 38)

	':'            shift, and enter state 61


State 55

	Formula -> '(' Formula ')' .                        (rule 39)

	IDENT          reduce using rule 39
	','            reduce using rule 39
	'theorem'      reduce using rule 39
	'by'           reduce using rule 39
	'for'          reduce using rule 39
	'⊢'            reduce using rule 39
	'⊤'            reduce using rule 39
	'⊥'            reduce using rule 39
	'∀'            reduce using rule 39
	'∃'            reduce using rule 39
	'¬'            reduce using rule 39
	'∧'            reduce using rule 39
	'∨'            reduce using rule 39
	'==>'          reduce using rule 39
	'<=>'          reduce using rule 39
	'('            reduce using rule 39
	')'            reduce using rule 39
	'['            reduce using rule 39
	']'            reduce using rule 39
	'{'            reduce using rule 39
	'}'            reduce using rule 39
	'_'            reduce using rule 39
	'---'          reduce using rule 39
	BEGIN_LAYOUT   reduce using rule 39
	%eof           reduce using rule 39


State 56

	Formula -> '[' Formula ']' .                        (rule 41)

	IDENT          reduce using rule 41
	','            reduce using rule 41
	'theorem'      reduce using rule 41
	'by'           reduce using rule 41
	'for'          reduce using rule 41
	'⊢'            reduce using rule 41
	'⊤'            reduce using rule 41
	'⊥'            reduce using rule 41
	'∀'            reduce using rule 41
	'∃'            reduce using rule 41
	'¬'            reduce using rule 41
	'∧'            reduce using rule 41
	'∨'            reduce using rule 41
	'==>'          reduce using rule 41
	'<=>'          reduce using rule 41
	'('            reduce using rule 41
	')'            reduce using rule 41
	'['            reduce using rule 41
	']'            reduce using rule 41
	'{'            reduce using rule 41
	'}'            reduce using rule 41
	'_'            reduce using rule 41
	'---'          reduce using rule 41
	BEGIN_LAYOUT   reduce using rule 41
	%eof           reduce using rule 41


State 57

	Formula -> '{' Formula '}' .                        (rule 40)

	IDENT          reduce using rule 40
	','            reduce using rule 40
	'theorem'      reduce using rule 40
	'by'           reduce using rule 40
	'for'          reduce using rule 40
	'⊢'            reduce using rule 40
	'⊤'            reduce using rule 40
	'⊥'            reduce using rule 40
	'∀'            reduce using rule 40
	'∃'            reduce using rule 40
	'¬'            reduce using rule 40
	'∧'            reduce using rule 40
	'∨'            reduce using rule 40
	'==>'          reduce using rule 40
	'<=>'          reduce using rule 40
	'('            reduce using rule 40
	')'            reduce using rule 40
	'['            reduce using rule 40
	']'            reduce using rule 40
	'{'            reduce using rule 40
	'}'            reduce using rule 40
	'_'            reduce using rule 40
	'---'          reduce using rule 40
	BEGIN_LAYOUT   reduce using rule 40
	%eof           reduce using rule 40


State 58

	Theorem -> 'theorem' IDENT ':' . Assumptions '⊢' Conclusion Proof    (rule 22)
	Theorem -> 'theorem' IDENT ':' . Formula Proof      (rule 23)

	IDENT          shift, and enter state 9
	'⊢'            reduce using rule 25
	'⊤'            shift, and enter state 10
	'⊥'            shift, and enter state 11
	'∀'            shift, and enter state 12
	'∃'            shift, and enter state 13
	'¬'            shift, and enter state 14
	'('            shift, and enter state 15
	'['            shift, and enter state 16
	'{'            shift, and enter state 17

	Assumptions    goto state 59
	Formula        goto state 60
	Relation       goto state 8

State 59

	Theorem -> 'theorem' IDENT ':' Assumptions . '⊢' Conclusion Proof    (rule 22)

	'⊢'            shift, and enter state 96


State 60
